--- a/apps/blog/project.json
+++ b/apps/blog/project.json
@@ -19,7 +19,8 @@
         "assets": ["apps/blog/src/favicon.ico", "apps/blog/src/assets"],
         "styles": ["apps/blog/src/styles.css"],
         "scripts": [],
-        "webpackConfig": "@nrwl/react/plugins/webpack"
+        "webpackConfig": "@nrwl/react/plugins/webpack",
+        "postcssConfig": "apps/blog/postcss.config.js"
       },
       "configurations": {
         "development": {
